--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="login-container">
+        <img src="img/logo.png" alt="Logo" class="login-logo">
         <h2>Iniciar Sesión</h2>
         <form id="loginForm" action="login.php" method="POST">
             <label for="username">Usuario:</label>
@@ -14,6 +15,7 @@
             <label for="password">Contraseña:</label>
             <input type="password" name="password" id="password" required>
             <button type="submit">Iniciar Sesión</button>
+            <button type="button" id="registerButton">Registrarse</button>
         </form>
         <p id="error-message"></p>
     </div>
@@ -26,6 +28,10 @@
                 event.preventDefault();
                 document.getElementById('error-message').textContent = 'Por favor, complete todos los campos.';
             }
+        });
+
+        document.getElementById('registerButton').addEventListener('click', function() {
+            window.location.href = 'registro.html'; 
         });
     </script>
 </body>
