--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
         <img src="img/logo.png" alt="Logo" class="login-logo">
         <h2>Iniciar Sesión</h2>
         <form id="loginForm" action="login.php" method="POST">
-            <label for="username">Usuario:</label>
-            <input type="text" name="username" id="username" required>
-            <label for="password">Contraseña:</label>
-            <input type="password" name="password" id="password" required>
+            <input type="text" name="username" id="username" placeholder="Usuario" required>
+            
+            <input type="password" name="password" id="password" placeholder="Contraseña" required>
             <button type="submit">Iniciar Sesión</button>
             <button type="button" id="registerButton">Registrarse</button>
         </form>
