--- a/registro.html
+++ b/registro.html
@@ -16,7 +16,7 @@
         <h1>Registro de Coordinadores Académicos y Directores</h1>
     </header>
     <main>
-        <form action="php/registro.php" method="POST">
+        <form id="registrationForm" action="php/registro.php" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
@@ -35,7 +35,12 @@
             </div>
             <div class="form-group">
                 <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required
+                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}"
+                       title="La contraseña debe tener al menos 8 caracteres, incluyendo mayúsculas, minúsculas, un número y un carácter especial.">
+                <small id="passwordHelp" class="form-text text-muted">
+                    La contraseña debe tener al menos 8 caracteres, incluyendo mayúsculas, minúsculas, un número y un carácter especial.
+                </small>
             </div>
             <div class="form-group">
                 <label for="rol">Rol:</label>
@@ -51,5 +56,17 @@
         <p>&copy; 2024 Universidad UTC. Todos los derechos reservados.</p>
     </footer>
 </div>
+
+<script>
+document.getElementById('registrationForm').addEventListener('submit', function(event) {
+    var password = document.getElementById('password').value;
+    var passwordPattern = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}$/;
+
+    if (!passwordPattern.test(password)) {
+        event.preventDefault();
+        alert('La contraseña no cumple con los requisitos. Asegúrese de que tenga al menos 8 caracteres, incluyendo mayúsculas, minúsculas, un número y un carácter especial.');
+    }
+});
+</script>
 </body>
 </html>
