--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="login-container">
         <img src="img/logo.png" alt="Logo" class="login-logo">
         <h2>Iniciar Sesión</h2>
-        <form id="loginForm" action="login.php" method="POST">
+        <form id="loginForm" action="php/login.php" method="POST">
             <input type="text" name="username" id="username" placeholder="Usuario" required>
             
             <input type="password" name="password" id="password" placeholder="Contraseña" required>
