--- a/registro.html
+++ b/registro.html
@@ -45,8 +45,9 @@
             <div class="form-group">
                 <label for="rol">Rol:</label>
                 <select id="rol" name="rol" required>
-                    <option value="coordinador">Coordinador Académico</option>
-                    <option value="director">Director</option>
+                    <option value="coordinadora">Coordinador</option>
+                    <option value="directora">Director</option>
+                    <option value="cobranza">Cobranza</option>
                 </select>
             </div>
             <button type="submit">Registrar</button>
